# lmptools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE  Pipfile  README.md  Untitled.ipynb  main.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: changelog.yml  changelog_check.yml  changelog_reminder.yml  clang-format-check.yml  python-app.yml  release.yml  tests.yml
cpp/include/: atom.h  atom.hpp  dump.h  simulation.h  types.hpp  utils.h
cpp/src/: atom.cpp  dump.cpp  simulation.cpp  utils.cpp
examples/: merge_snapshots_and_print.ipynb  parsing.ipynb  plot_rg_vs_dr.ipynb  print_dumpfile.ipynb  radius_of_gyration.ipynb  radius_of_gyration.nbconvert.ipynb
lmptools/: __init__.py  atom.py  dump.py  exceptions.py  persistance.py  polymers.py  sql_models.py
lmptools/_lib/include/: atom.hpp  simulation.hpp  types.hpp  utils.hpp
lmptools/_lib/src/: atom.cpp  simulation.cpp
lmptools/core/: atom.py  exceptions.py  simulation.py  task.py
lmptools/dump/: base.py
lmptools/misc/: polymers.py
lmptools/tests/: test_dump.py
lmptools/writers/: base.py
lmptools/writers/sql/: __init__.py  models.py  sqlwriter.py
tests/: CMakeLists.txt  requirements.txt  test_dump.py  test_sql_models.py  test_sqlitewriter.py
tests/cpp/: dump_unittest.cpp  test_dumpsnapshot.cpp  test_simulationbox.cpp  test_utils.cpp
