[tool.poetry]
name = "lmptools"
version = "1.0.1"
description = "Post processing toolkit for LAMMPS"
authors = ["Venkat Bala <balavk89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.21.2"
pandas = "^1.3.2"
pydantic = "^1.8.2"
loguru = "^0.5.3"
scipy = "^1.7.1"
setuptools = "^57.4.0"
SQLAlchemy = "1.4.22"

[tool.poetry.dev-dependencies]
Faker = "^8.12.1"
pytest-faker = "^2.0.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
